[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Delft3D_RunMonitor"
version = "0.1.0"
description = "Tools for monitoring and visualising Delft3D simulation runs"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Delft3D", "monitoring", "mesh", "visualisation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "defopt",
    "numpy",
    "netCDF4",
    "pyvista"
]

[project.urls]
Homepage = "https://github.com/yourusername/Delft3D_RunMonitor"
Documentation = "https://github.com/yourusername/Delft3D_RunMonitor/wiki"
Repository = "https://github.com/yourusername/Delft3D_RunMonitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["Delft3D_RunMonitor*"]


